Fix ObjectModel::move() to mark the changes as moves

QQmlObjectModel::move() created a QQmlChangeSet with moveId -1,
which made item views and controls see the changes as removals and
insertions, because QQmlChangeSet::Change::isMove() returned false.
Consequently, item views did not update the current index when the
current item was moved.

Task-number: QTBUG-60894
Change-Id: I4a64b7670c1fae12337995627437cc83efb9f1ef
Reviewed-by: Michael Brasser <michael.brasser@live.com>
Reviewed-by: Robin Burchell <robin.burchell@crimson.no>